Adjust some list operation